--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,45 @@
-name: CI
+name: Build Vicinae Packages
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      # Install Nix (single-user) with flakes enabled
-      - uses: nixbuild/nix-quick-install-action@v28
-        with:
-          # specify nix config so flakes are enabled
-          nix_conf: |
-            experimental-features = nix-command flakes
-            accept-flake-config = true
+    - name: Set up Nix
+      uses: cachix/install-nix-action@v18
+      with:
+        nix_path: nixpkgs=channel:nixpkgs-unstable
 
-      # (Optional) set up a cache for /nix/store or the Nix build results
-      - name: Setup Nix cache (e.g. via cachix or cache action)
-        uses: cachix/install-nix-action@v20
-        # or use Magic Nix Cache action etc
+    - name: Cache Nix store
+      uses: actions/cache@v3
+      with:
+        path: /nix/store
+        key: ${{ runner.os }}-nix-store-${{ hashFiles('flake.nix') }}
+        restore-keys: |
+          ${{ runner.os }}-nix-store-
 
-      - name: Build vicinae (release)
-        run: nix build .#packages.x86_64-linux.release
+    - name: Build stable package
+      run: nix build .#packages.x86_64-linux.stable
 
-      - name: Build vicinae (git)
-        run: nix build .#packages.x86_64-linux.git
+    - name: Build git package
+      run: nix build .#packages.x86_64-linux.git
+
+    - name: Upload stable build artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: vicinae-stable
+        path: ./result
+
+    - name: Upload git build artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: vicinae-git
+        path: ./result
