--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
         key: ${{ runner.os }}-nix-store-${{ hashFiles('flake.nix') }}
         restore-keys: |
           ${{ runner.os }}-nix-store-
+	  
+    - name: Update ref in flake.nix with latest tag
+      run: |
+        REPO_URL="https://github.com/vicinaehq/vicinae.git"
+        LATEST_TAG=$(git ls-remote --tags --sort=-v:refname $REPO_URL | head -n 1 | awk -F'/' '{print $3}')
+        sed -i 's|\(stable.url = "github:vicinaehq/vicinae?ref=\)[^"]*|\1'"$LATEST_TAG"'|' ../../flake.nix
 
     - name: Build stable package
       run: nix build .#packages.x86_64-linux.stable
