--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Nix
-      uses: cachix/install-nix-action@v18
-      with:
-        nix_path: nixpkgs=channel:nixpkgs-unstable
+      uses: nixbuild/nix-quick-install-action@v34
+      # uses: cachix/install-nix-action@latest
+      # with:
+        # nix_path: nixpkgs=channel:nixpkgs-unstable
 
     - name: Cache Nix store
       uses: actions/cache@v4
